fixed spacing in about/linkedin opening in new tab

--- a/humpsub-website/css/stylish-portfolio.css
+++ b/humpsub-website/css/stylish-portfolio.css
@@ -155,7 +155,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/bg.jpg) no-repeat center center scroll;
+    background: url(../img/purple_seattle.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -166,6 +166,7 @@ hr.small {
 
 .about {
     padding: 50px 0;
+    word-spacing: .3em;
 }
 
 /* Services */
